--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello</h2>
+    <header>
+        <nav class="flex justify-between">
+            <img src="" alt="">
+
+            <ul class="flex item-center justify-around max-20 gap-20 text-xl cursor-pointer ">
+                <li class="hove:text-red-400">Home</li>
+                <li class="hove:text-red-400">About Us</li>
+                <li class="hove:text-red-400">Contact Us</li>
+                <li class="hove:text-red-400">FAQS</li>
+             </ul>
+            </nav>
+    </header>
+    <Main>
+      <div>
+        
+      </div>
+    </Main>
 </body>
 </html>
